updated gitignore, fixed spacing in jobs

--- a/src/App/pages/jobs/jobs.css
+++ b/src/App/pages/jobs/jobs.css
@@ -21,8 +21,8 @@
 
 .jobs-filter{
     display: flex;
-    flex: 8 1;
-    padding: 1rem 2rem 1rem 1rem;
+    flex: 7;
+    padding: 1rem 2rem 1rem 2rem;
     align-items: center;
     flex-direction: column;
 }
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 7rem;
+    gap: 5rem;
     margin-bottom: 5rem;
 }
 
@@ -85,7 +85,7 @@
 
 .job-grid{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
     gap: 0.8rem 0.8rem;
     align-items: start;
